--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0; 
     padding: 0;
     box-sizing: border-box;
+    transition: .3s;
        
 }
 #ataques{
@@ -57,6 +58,9 @@ body{
     border-color: transparent;
     border-radius: 2px;
     color: wheat;
+}
+#tarjeta #boton-ok:hover{
+    opacity: 30%;
 }
 #tarjeta img{
     height: 40px;
