--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,18 @@ h1{
     font-family: 'MuseoModerno', cursive;
     color: var(--c4);
     font-size: 2.5rem;
+    text-align: center;
 }
 #botones .boton:hover{
     width: 84px;
     height: 84px;
+}
+@media (max-width:430px) {
+    h1{
+        position: static;
+    }
+    #puntos{
+        top:auto;
+        bottom: 0;
+    }
 }
